--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: rGroovy
 Type: Package
-Title: Groovy language integration for the R Project for Statistical Computing
+Title: Groovy language integration
 Version: 1.0
 Date: 2015-27-10
 Author: Thomas P. Fuller <thomas.fuller@coherentlogic.com>
 Maintainer: Thomas P. Fuller <thomas.fuller@coherentlogic.com>
 Description: This package integrates the Groovy scripting language with the R
     Project for Statistical Computing. This package ships with Groovy 2.4.5 and
-    uses the invoke dynamic dependencies. 
+    uses the invoke dynamic dependencies.
 SystemRequirements: Java (>= 7.0)
-Imports:
+Depends:
     rJava
+Suggests:
+    testthat
 LazyLoad: yes
 License: LGPL-3
 Copyright: (C) 2015 Coherent Logic Limited; ALL RIGHTS RESERVED.
@@ -18,6 +20,6 @@ URL: http://www.r-project.org,
     http://groovy.codehaus.org/,
     http://www.groovy-lang.org/indy.html,
     http://beta.groovy-lang.org/docs/latest/html/gapi/,
-    https://coherentlogic.com/rgroovy?source=cran
+    https://coherentlogic.com/middleware-development/rgroovy?source=cran
 Repository: https://bitbucket.org/CoherentLogic/rgroovy
 Archs: i386, x64
